# Rico-Your-AI-intelligent-job-hunt-partner-in-the-UAE

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .mcp.json  .mcp.json.example  .vercelignore  .windsurfrules  AGENTS.md  CHATGPT_SKILLS.md  CLAUDE.md  CODE_REVIEW_SPLIT_PLAN.md  DESIGN.md  Dockerfile.backend  JOB_SOURCE_ADAPTER_REVIEW_REPORT.md  LICENSE  MERGE_DECISIONS.md  OWNERSHIP.md  PROJECT_NOTICE.md  README.md  RICO_CLOUD_SETUP.md  cleanup-file-inventory.txt  docker-compose.yml  locustfile.py  locustfile_final.py  locustfile_fixed.py  locustfile_production.py  locustfile_public_only.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  rico-ai-pitch-deck.pptx  run_local_test.py  test_hse_jobs.py  test_job_processing.py  test_memory_small.py  vercel.json
.claude/: settings.json
.github/: pull_request_template.md
AI_WORKSPACE/: .branch-bootstrap  AGENT_OPERATING_MODEL.md  AGENT_OS_ROADMAP_AR.md  AGENT_SKILLS.md  ARCHITECTURE.md  ATELIER_FULL_SITE_MIGRATION.md  ATELIER_MIGRATION_PROGRAM.md  CAREER_CONTEXT_PROGRAM.md  CAREER_OS_VISION.md  COMMAND_V5_IMPLEMENTATION_MAP.md  CURRENT_STATE.md  DAILY_AUTOPILOT.md  DECISIONS.md  DESIGN_HANDOFF_INCOMING_AUDIT_2026-07-24.md  DEVELOPMENT_LOOP_STATE.md  ENGINEERING_ROADMAP.md  EXECUTION_BRIEF_2026-07-08.md  LAUNCH_EXECUTION_PLAN.md  LAUNCH_READINESS_2026-07-21.md  MASTER_INDEX.md  OPEN_PR_TRIAGE_2026-07-13.md  OPERATING_RULES.md  PRODUCT_COMMUNICATIONS_STANDARD.md  PROJECT_BRIEF.md  PROJECT_STATUS.md  PROMPT_CONTRACT.md  PR_CHECKLIST.md  PR_QUALITY_GATE_RULES.md  START_HERE.md  (+4 more)
(+1816 files in other folders)
